# turing-machine-simulator

./: Cargo.toml  LICENSE  README.md  example.toml  example2.toml  rustfmt.toml
example/: example1.toml  example2.toml  example3.toml
src/: error.rs  main.rs  parser.rs
src/tape/: mod.rs
src/turing_machine/: mod.rs  tape.rs  tape_function.rs  transition.rs
src/turing_machine/tape_function/: mod.rs  transition.rs
