[package]
name = "turing-machine-simulator"
description = "Multitape and deterministic Turing machine CLI simulator."

readme = "README.md"
license = "MIT"

repository = "https://github.com/TheLazyFerret/turing-machine-rs"

version = "0.0.0"
edition = "2024"

[dependencies]
toml = "0.9.8"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.53", features = [ "derive" ]}